# src/controllers/getAverageClicks/index.js
@@ -14,7 +14,7 @@ const validation = {
 
 module.exports = {
   method: 'get',
-  route: '/v1/users/:uuid/clicks',
+  route: '/v1/statistics/users/:uuid/clicks',
   validation,
   handler
 };
